@@ -1,8 +1,8 @@
-ATTACK_DELAY_TIME = 2.5
+ATTACK_DELAY_TIME = 0.5
 BEAM_HOLD_DURATION = 1.5
 BEAM_OPEN_SPEED = 0.3
 BREATHE_TIME = 2.1
-BUG_ATTACK_SPEED_BASE = 50.0
+BUG_ATTACK_SPEED_BASE = 40.0
 BUG_ATTACK_SPEED_MAX = 70.0
 BUG_ATTACK_SPEED_WINDOW = 10
 BUG_TRAVEL_SPEED = 70.0
